# libvlcpp

./: AUTHORS  ChangeLog  DISCONTINUED  Makefile.am  NEWS  README  README.md  README.txt  config.h.in  configure.ac  libvlcpp.sln
libvlcpp/: Makefile.am  library.hpp  libvlcpp.vcproj  vlc.cpp  vlc.hpp  vlcpp.cpp  vlcpp.hpp
libvlcpp/linux/: library.cpp
libvlcpp/win32/: dllmain.cpp  library.cpp  libvlcpp.rc  resource.h  settings.vsprops  stdafx.h  targetver.h
m4/: aclocal.m4
nbproject/: configurations.xml  project.xml
vlcpp/: Makefile.am  README.txt  application.cpp  application.hpp  main.cpp  options.cpp  options.hpp  vlcpp.vcproj
vlcpp/win32/: resource.h  vlcpp.rc
